--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+    <meta name="google-site-verification" content="J-T3yzsxVIOFEHSkz0DiEDJu1EPO2y23zQtY972QA1c" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rydhoi Trimaniel Lase</title>
